apps/kube/herbmail/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: herbmail-route
    namespace: herbmail
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - herbmail.com
        - www.herbmail.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: herbmail-service
                port: 4321
